# roscan

./: .gitignore  COPYRIGHT  README.md  canrun.sh  components-roscan.puml  echo.sh  gpsrun.sh  launch.sh  playerrun.sh  setup.sh
docs/: activity-roscan-alternate.puml  activity-roscan.puml  components-roscan.puml  design-roscan.puml
include/CANFactory/: CANTypes.h  CanMessage.h  CanMessageBridges.hpp  CanQueues.hpp  GenericFactory.hpp  PGNRequest.h  TwoBytePGNRequest.h
include/CommonCore/: CommonTypes.h  UUID.h
include/GpsService/: GpsMessages.h  GpsServiceBridges.hpp  GpsServiceMessages.hpp  GpsTypes.h
include/JDMath/: JDCircle.h  JDMath.h  ParameterScaling.h
include/JDProjection/: JDProjection.h
launch/: roscan_launch.py
src/can_interfaces/: CMakeLists.txt  package.xml
src/can_interfaces/msg/: BearingSpeed.msg  CanData.msg  DifferentialStatus.msg  DirectionSpeed.msg  GenericMsg.msg  GpsDevice.msg  GpsEpoch.msg  GpsEx.msg  GpsStatus.msg  HeadingMode.msg  MachineSelectedSpeed.msg  PgnRequest.msg  PitchAltitude.msg  ReceiverInfo.msg  RollYawRate.msg  SatellitesUsed.msg  TerrainCompensation.msg  TimeDate.msg  VehiclePosition.msg  WheelBasedSpeedAndDistance.msg
src/can_interfaces/srv/: RegisterMsg.srv
src/canplay_pkg/: CMakeLists.txt  package.xml
src/canplay_pkg/src/: CanNode.cpp  CanNode.hpp  CanPlayer.cpp  CanPlayer.hpp  ICanSource.hpp  ProcessingFns.cpp  ProcessingFns.hpp  canplay_node.cpp
src/gps_service_pkg/: CMakeLists.txt  package.xml
src/gps_service_pkg/src/: DirectionCoordinator.cpp  DirectionCoordinator.h  GpsModel.cpp  GpsModel.h  GpsService.cpp  GpsService.h  GpsServiceROS.cpp  GpsServiceROS.h  GpsServiceTopics.h  gps_service_node.cpp
src/roscan_pkg/: CMakeLists.txt  package.xml
src/roscan_pkg/src/: CanBridge.cpp  CanBridge.hpp  roscan_node.cpp
